# fiber-job-system

./: .gitignore  CMakeLists.txt  README.md  fjs.sln  fjs.vcxproj  fjs.vcxproj.filters
include/fjs/: Common.h  Counter.h  Fiber.h  Job.h  List.h  Manager.h  Queue.h  TLS.h  Thread.h  detail_MPMCQueue.h
include/fjs/detail/: Delegate.h  detail.h  function_checks.h  function_traits.h  mpmc_queue.h
src/: Counter.cpp  Fiber.cpp  Job.cpp  List.cpp  Manager.cpp  ManagerCallbacks.cpp  ManagerJobs.cpp  ManagerThreads.cpp  Queue.cpp  Thread.cpp
test/main-test/: Main.cpp  main-test.vcxproj  main-test.vcxproj.filters
